crash when you use skin resize(ctrl+a) on two objects with multi edit, when skin modifier applyes only to one of objects #66311

Closed
opened 2019-07-01 20:37:00 +02:00 by иван платонов · 5 comments

System Information
Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13558 Core Profile Context 26.20.11015.5009

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-01 15:48, hash: dcf520cdad
Worked: (optional)

Short description of error
crash when you use skin resize on two objects with multi edit, when skin modifier applyes to only one of objects{F7559159}

Exact steps for others to reproduce the error
add two objects: 1 object - edge, second - edge. Add skin modifier to first edge. then select two objects and enter edit mode. Select all vertices and try to use skin resize(ctrl+a)

**System Information** Operating system: Windows-10-10.0.14393 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13558 Core Profile Context 26.20.11015.5009 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-01 15:48, hash: `dcf520cdad` Worked: (optional) **Short description of error** crash when you use skin resize on two objects with multi edit, when skin modifier applyes to only one of objects{[F7559159](https://archive.blender.org/developer/F7559159/skin_modifier.blend)} **Exact steps for others to reproduce the error** add two objects: 1 object - edge, second - edge. Add skin modifier to first edge. then select two objects and enter edit mode. Select all vertices and try to use skin resize(ctrl+a)

Added subscriber: @ivan-platonov

Added subscriber: @ivan-platonov
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by c6a199e254

This issue was referenced by c6a199e2542b41b8f75a967579b1180d25196084
Philipp Oeser self-assigned this 2019-07-02 10:52:34 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66311
No description provided.