source/blender/editors/transform/transform_ops.c
@@ -33,6 +33,7 @@
 #include "BKE_global.h"
 #include "BKE_report.h"
 #include "BKE_editmesh.h"
+#include "BKE_layer.h"
 #include "BKE_scene.h"
 
 #include "RNA_access.h"
@@ -756,12 +757,24 @@ static void TRANSFORM_OT_resize(struct wmOperatorType *ot)
 
 static bool skin_resize_poll(bContext *C)
 {
-  struct Object *obedit = CTX_data_edit_object(C);
-  if (obedit && obedit->type == OB_MESH) {
-    BMEditMesh *em = BKE_editmesh_from_object(obedit);
-    return (em && CustomData_has_layer(&em->bm->vdata, CD_MVERT_SKIN));
+  uint objects_len = 0;
+  Object **objects = BKE_view_layer_array_from_objects_in_edit_mode_unique_data(
+      CTX_data_view_layer(C), CTX_wm_view3d(C), &objects_len);
+
+  bool ok = false;
+
+  for (uint ob_index = 0; ob_index < objects_len; ob_index++) {
+    Object *obedit = objects[ob_index];
+    if (obedit->type == OB_MESH) {
+      BMEditMesh *em = BKE_editmesh_from_object(obedit);
+      if (em && CustomData_has_layer(&em->bm->vdata, CD_MVERT_SKIN)) {
+        ok = true;
+      }
+    }
   }
-  return 0;
+  MEM_freeN(objects);
+
+  return ok;
 }
 
 static void TRANSFORM_OT_skin_resize(struct wmOperatorType *ot)
